stateful-nginx.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: stateful-nginx
spec:
  serviceName: "nginx1"
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx
